# lightbench

./: .buildinfo  .gitignore  CONTRIBUTING.md  LICENSE  README.md  chat.py  code_evaluator.py  cuda-test.py  cuda_test.py  evaluate.py  evaluator.py  examples.ipynb  genindex.html  index.html  install_dependencies.sh  lightbench.evaluators.html  lightbench.html  lightbench.loaders.html  lightbench.metrics.html  lightbench.utils.html  llm_judge.py  metrics.py  model_configs.py  model_loaders.py  model_setup_configurator.py  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  run_eval.py  search.html  searchindex.js  setup.py  text_evaluator.py  ttft.py  utils.py
.github/workflows/: gh-pages.yml
_sources/: index.rst  index.rst.txt  lightbench.evaluators.rst.txt  lightbench.loaders.rst  lightbench.loaders.rst.txt
api/: README.md  api.py  mwe.py
data/: README.md
data/CVerse/: CVerse.json
data/hotpotqa/: hotpot_train_sample.jsonl  hotpotqa.py
data/mbpp/: mbpp.py
docs/: conf.py  index.rst  lightbench.evaluators.rst  lightbench.loaders.rst  lightbench.metrics.rst  lightbench.rst  lightbench.utils.rst
evaluators/: code_evaluator.py  cv_bias_evaluator.py  text_evaluator.py
lightbench/: __init__.py
lightbench/data/: data_set.py
lightbench/evaluators/: code_evaluator.py  cv_bias_evaluator.py  text_evaluator.py
lightbench/loaders/: claude_loader.py  deepseek_loader.py  generation.py  huggingface_model_loader.py  (+3 more)
loaders/: llama_loader.py  loader.py  mistral_loader.py  model_loaders.py  openai_loader.py
metrics/: llm_judge.py  metrics.py
(+4 files in other folders)
